[package]
name = "rifling"
description = "A library for creating Github webhook listener"
version = "0.3.3"
authors = ["Kay Lin <i@v2bv.net>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["github", "webhook", "ci"]
homepage = "https://github.com/RedL0tus/rifling"
repository = "https://github.com/RedL0tus/rifling"

[badges]
maintenance = { status = "experimental" }

[features]
default = ["hyper-support", "parse", "crypto-use-ring"]
hyper-support = ["hyper", "futures"]
parse = ["serde_json"]
crypto-use-ring = ["ring", "hex"]
crypto-use-rustcrypto = ["hmac", "sha-1", "hex"]

[dependencies]
hex = { version = "0.3", optional = true }
log = "0.4"
url = "1.7"
hmac = { version = "0.7", optional = true }
ring = { version = "0.14", optional = true }
hyper = { version = "0.12", optional = true }
sha-1 = { version = "0.8", optional = true }
futures = { version = "0.1", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
pretty_env_logger = "0.3"