[package]
name = "rifling"
description = "A library for creating Github/Gitlab webhook listener"
version = "0.3.3"
authors = ["Kay Lin <i@v2bv.net>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["github", "gitlab", "webhook", "ci"]
homepage = "https://github.com/RedL0tus/rifling"
repository = "https://github.com/RedL0tus/rifling"

[badges]
travis-ci = { repository = "RedL0tus/rifling", branch = "master" }

[features]
default = ["hyper-support", "parse", "crypto-use-ring", "logging", "content-type-urlencoded"]
hyper-support = ["hyper", "futures"]
parse = ["serde_json"]
crypto-use-ring = ["ring", "hex"]
crypto-use-rustcrypto = ["hmac", "sha-1", "hex"]
logging = ["log"]
logging-print = []
content-type-urlencoded = ["url"]

[dependencies]
hex = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
url = { version = "1.7", optional = true }
hmac = { version = "0.7", optional = true }
ring = { version = "0.14", optional = true }
hyper = { version = "0.12", optional = true }
sha-1 = { version = "0.8", optional = true }
futures = { version = "0.1", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
pretty_env_logger = "0.3"

[[example]]
name = "hyper-simple"
path = "examples/hyper-simple.rs"
